Correct text alignment and size

--- a/foundations/intro-to-css/01-css-methods/styles.css
+++ b/foundations/intro-to-css/01-css-methods/styles.css
@@ -3,6 +3,8 @@
   div {
     color: white;
     background-color: red;
+    text-align: center;
+    font-size: 28px;
 
 
     
